--- a/Accounting_frontend/src/controls/table/table.component.html
+++ b/Accounting_frontend/src/controls/table/table.component.html
@@ -1,11 +1,11 @@
-<table mat-table [dataSource]="dataSource">
+<table class="acc-table" mat-table [dataSource]="dataSource">
   <ng-container *ngFor="let column of columns" [matColumnDef]="column.path">
-    <th mat-header-cell *matHeaderCellDef> {{ column.header }} </th>
+    <th mat-header-cell *matHeaderCellDef class="header acc-header-3"> {{ column.header }} </th>
     <td mat-cell *matCellDef="let data"> 
       {{ data[column.path] }}
     </td>
 
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;" (click)="rowClick.emit(row)"></tr>
   </ng-container>
 </table>
