--- a/Accounting_frontend/src/account/account-editor/account-editor.component.html
+++ b/Accounting_frontend/src/account/account-editor/account-editor.component.html
@@ -1,1 +1,19 @@
-<p>account-editor works!</p>
+<h1 mat-dialog-title>Счет</h1>
+
+<div mat-dialog-content>
+  <mat-form-field>
+    <app-label
+      text="Наименование"
+    ></app-label>
+
+    <app-input
+      placeholder="Наименование"
+      [control]="getControl('name')"
+    ></app-input>
+  </mat-form-field>
+</div>
+
+<div mat-dialog-actions>
+  <button mat-button mat-dialog-close>Отмена</button>
+  <button mat-button mat-dialog-close cdkFocusInitial>Сохранить</button>
+</div>
