--- a/Accounting_frontend/src/controls/input/input.component.html
+++ b/Accounting_frontend/src/controls/input/input.component.html
@@ -1,4 +1,15 @@
-<input matInput 
-  [placeholder]="placeholder"
-  [formControl]="control"
-/>
+<div
+  class="app-input"
+  [style.width]="width"
+  [style.height]="height"
+>
+  <input matInput
+    class="acc-header-3 h-100 w-100"
+    [placeholder]="placeholder"
+    [formControl]="control"
+  />
+
+  <div class="icon-container" *ngIf="control.invalid">
+    <mat-icon class="error-icon">error_outline</mat-icon>
+  </div>
+</div>
