--- a/Accounting_frontend/src/controls/label/label.component.html
+++ b/Accounting_frontend/src/controls/label/label.component.html
@@ -1,3 +1,7 @@
-<label class="app-label">
-  {{ text }}
-</label>
+<mat-label 
+  class="app-label"
+  [style.width]="width"
+  [style.height]="height"
+>
+  {{text}}
+</mat-label>
