--- a/Accounting_frontend/src/styles.scss
+++ b/Accounting_frontend/src/styles.scss
@@ -7,17 +7,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 //32 px
 .acc-header-1 {
-  font-size: 2rem;
+  font-size: 2rem !important;
 }
 
 //22 px
 .acc-header-2 {
-  font-size: 1.375rem;
+  font-size: 1.375rem !important;
 }
 
 //18 px
 .acc-header-3 {
-  font-size: 1.125rem;
+  font-size: 1.125rem !important;
 }
 
 .button-container {
