--- a/Accounting_frontend/src/template/template-editor/template-editor.component.html
+++ b/Accounting_frontend/src/template/template-editor/template-editor.component.html
@@ -1,1 +1,47 @@
-<p>template-editor works!</p>
+<app-dialog
+  title="Шаблон"
+  [body]="body"
+  [buttons]="buttons"
+  (close)="onCancel()"
+></app-dialog>
+
+<ng-template #body>
+  <app-label
+    class="acc-header-3 mb-1"
+    text="Наименование"
+    width="100%"
+  ></app-label>
+
+  <app-input
+    class="mb-3"
+    placeholder="Наименование"
+    [control]="getControl('name')"
+    width="100%"
+  ></app-input>
+
+  <app-label
+    class="acc-header-3 mb-1"
+    text="Категория"
+    width="100%"
+  ></app-label>
+
+  <app-autocomplete
+    placeholder="Категория"
+    [control]="getControl('defaultCategory')"
+    [items]="(categories$ | async) || []"
+    display="name"
+  ></app-autocomplete>
+</ng-template>
+
+<ng-template #buttons>
+  <app-button
+    text="Отмена"
+    (buttonClick)="onCancel()"
+  ></app-button>
+
+  <app-button
+    text="Сохранить"
+    [enabled]="formGroup.valid"
+    (buttonClick)="onSave()"
+  ></app-button>
+</ng-template>
