--- a/Accounting_frontend/src/template/template-list/template-list.component.html
+++ b/Accounting_frontend/src/template/template-list/template-list.component.html
@@ -1,1 +1,25 @@
-<p>template-list works!</p>
+<div class="button-container mb-2">
+  <app-button
+    text="Добавить"
+    (buttonClick)="onAdd()"
+  ></app-button>
+
+  <app-button
+    text="Изменить"
+    [enabled]="!!selected"
+    (buttonClick)="onModify()"
+  ></app-button>
+
+  <app-button
+    text="Удалить"
+    [enabled]="!!selected"
+    (buttonClick)="onDelete()"
+  ></app-button>
+</div>
+
+<app-table
+  [(selected)]="selected"
+  [columns]="columns"
+  [dataSource]="dataSource"
+  (doubleClick)="onDoubleClick($event)"
+></app-table>
