Сущность шаблон и формы редактирования переделаны в "Контрагент"

--- a/Accounting_frontend/src/app/app.component.html
+++ b/Accounting_frontend/src/app/app.component.html
@@ -22,9 +22,9 @@
       <div class="menu-item">
         <span 
           class="acc-header-2"
-          [ngClass]="{'menu-item-selected': isActive('templates')}"
-          [routerLink]="['templates']"
-        >Шаблоны</span>
+          [ngClass]="{'menu-item-selected': isActive('contractors')}"
+          [routerLink]="['contractors']"
+        >Контрагенты</span>
       </div>
       
       <div class="menu-item">
