Добавлен тип операции приход/расход. Добавлен  компонент-календарь. Доработан редактор операций.

--- a/Accounting_frontend/src/contractor/contractor-editor/contractor-editor.component.html
+++ b/Accounting_frontend/src/contractor/contractor-editor/contractor-editor.component.html
@@ -29,7 +29,7 @@
     placeholder="Категория"
     [control]="getControl('category')"
     [items]="(categories$ | async) || []"
-    display="name"
+    [displayFn]="categoryDisplayFn"
   ></app-autocomplete>
 </ng-template>
 
