--- a/Accounting_frontend/src/controls/autocomplete/autocomplete.component.html
+++ b/Accounting_frontend/src/controls/autocomplete/autocomplete.component.html
@@ -11,10 +11,10 @@
     [formControl]="control"
     [matAutocomplete]="auto"
   />
-        
-  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFuncBind">
+  
+  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="onOptionSelected($event)">
     <mat-option *ngFor="let item of items" [value]="item">
-      {{ display && display.length ? item[display] : item}}
+      {{ displayFn(item) }}
     </mat-option>
   </mat-autocomplete>
 
