--- a/Accounting_frontend/src/controls/input/input.component.html
+++ b/Accounting_frontend/src/controls/input/input.component.html
@@ -5,6 +5,7 @@
 >
   <input matInput
     class="acc-header-3 h-100 w-100"
+    [type]="type"
     [placeholder]="placeholder"
     [formControl]="control"
   />
