--- a/Accounting_frontend/src/controls/table/table.component.html
+++ b/Accounting_frontend/src/controls/table/table.component.html
@@ -2,7 +2,20 @@
   <ng-container *ngFor="let column of columns" [matColumnDef]="column.path">
     <th mat-header-cell *matHeaderCellDef class="acc-table__header-cell acc-header-3"> {{ column.header }} </th>
     <td mat-cell *matCellDef="let data" class="acc-table__data-cell acc-header-3"> 
-      {{ getData(data, column.path) }}
+      <ng-container [ngSwitch]="column.type">
+        <ng-container *ngSwitchCase="'Date'">
+          {{ getData(data, column.path) | date: 'd.MM.Y' }}
+        </ng-container>
+        <ng-container *ngSwitchCase="'Currency'">
+          <span class="acc-table__data-cell__number"> {{ getData(data, column.path) | number:'1.2-2' }} </span>
+        </ng-container>
+        <ng-container *ngSwitchCase="'Number'">
+          <span class="acc-table__data-cell__number"> {{ getData(data, column.path) }} </span>
+        </ng-container>
+        <ng-container *ngSwitchDefault>
+          {{ getData(data, column.path) }}
+        </ng-container>
+      </ng-container>
     </td>
   </ng-container>
 
