--- a/Accounting_frontend/src/contractor/contractor-editor/contractor-editor.component.html
+++ b/Accounting_frontend/src/contractor/contractor-editor/contractor-editor.component.html
@@ -21,6 +21,19 @@
 
   <app-label
     class="acc-header-3 mb-1"
+    text="Код"
+    width="100%"
+  ></app-label>
+
+  <app-input
+    class="mb-3"
+    placeholder="Код"
+    [control]="getControl('code')"
+    width="100%"
+  ></app-input>
+
+  <app-label
+    class="acc-header-3 mb-1"
     text="Категория"
     width="100%"
   ></app-label>
