--- a/Accounting_frontend/src/app/app.component.html
+++ b/Accounting_frontend/src/app/app.component.html
@@ -34,6 +34,14 @@
           [routerLink]="['operations']"
         >Операции</span>
       </div>      
+
+      <div class="menu-item">
+        <span 
+          class="acc-header-2"
+          [ngClass]="{'menu-item-selected': isActive('plans')}"
+          [routerLink]="['plans']"
+        >Планы</span>
+      </div>   
     </div>
   </mat-drawer>
   <mat-drawer-content>
