--- a/Accounting_frontend/src/category/category-list/category-list.component.html
+++ b/Accounting_frontend/src/category/category-list/category-list.component.html
@@ -1,25 +1,28 @@
-<div class="button-container mb-2">
-  <app-button
-    text="Добавить"
-    (buttonClick)="onAdd()"
-  ></app-button>
+<div class="d-flex flex-column h-100">
+  <div class="button-container mb-2">
+    <app-button
+      text="Добавить"
+      (buttonClick)="onAdd()"
+    ></app-button>
 
-  <app-button
-    text="Изменить"
-    [enabled]="!!selected"
-    (buttonClick)="onModify()"
-  ></app-button>
+    <app-button
+      text="Изменить"
+      [enabled]="!!selected"
+      (buttonClick)="onModify()"
+    ></app-button>
 
-  <app-button
-    text="Удалить"
-    [enabled]="!!selected"
-    (buttonClick)="onDelete()"
-  ></app-button>
+    <app-button
+      text="Удалить"
+      [enabled]="!!selected"
+      (buttonClick)="onDelete()"
+    ></app-button>
+  </div>
+
+  <app-table
+    class="min-height-0"
+    [(selected)]="selected"
+    [columns]="columns"
+    [dataSource]="dataSource"
+    (doubleClick)="onDoubleClick($event)"
+  ></app-table>
 </div>
-
-<app-table
-  [(selected)]="selected"
-  [columns]="columns"
-  [dataSource]="dataSource"
-  (doubleClick)="onDoubleClick($event)"
-></app-table>
