--- a/Accounting_frontend/src/controls/button/button.component.html
+++ b/Accounting_frontend/src/controls/button/button.component.html
@@ -7,5 +7,6 @@
   [ngClass]="{'disabled': !enabled}"
   (click)="buttonClick.emit()"
 >
+  <mat-icon *ngIf="icon && icon.length">{{icon}}</mat-icon>
   <span class="acc-header-3">{{ text }}</span>
 </button>
