--- a/Accounting_frontend/src/controls/table/table.component.html
+++ b/Accounting_frontend/src/controls/table/table.component.html
@@ -1,30 +1,36 @@
-<table class="acc-table" mat-table [dataSource]="dataSource">
-  <ng-container *ngFor="let column of columns" [matColumnDef]="column.path">
-    <th mat-header-cell *matHeaderCellDef class="acc-table__header-cell acc-header-3"> {{ column.header }} </th>
-    <td mat-cell *matCellDef="let data" class="acc-table__data-cell acc-header-3"> 
-      <ng-container [ngSwitch]="column.type">
-        <ng-container *ngSwitchCase="'Date'">
-          {{ getData(data, column.path) | date: 'd.MM.Y' }}
+<div class="scroll">
+  <table class="acc-table" mat-table [dataSource]="dataSource">
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column.path">
+      <th mat-header-cell *matHeaderCellDef class="acc-table__header-cell acc-header-3"> {{ column.header }} </th>
+      <td mat-cell *matCellDef="let data" class="acc-table__data-cell acc-header-3">
+        <ng-container *ngIf="column.displayFn; else noDisplayFn">
+          {{ column.displayFn(data) }}
         </ng-container>
-        <ng-container *ngSwitchCase="'Currency'">
-          <span class="acc-table__data-cell__number"> {{ getData(data, column.path) | number:'1.2-2' }} </span>
-        </ng-container>
-        <ng-container *ngSwitchCase="'Number'">
-          <span class="acc-table__data-cell__number"> {{ getData(data, column.path) }} </span>
-        </ng-container>
-        <ng-container *ngSwitchDefault>
-          {{ getData(data, column.path) }}
-        </ng-container>
-      </ng-container>
-    </td>
-  </ng-container>
 
-  <tr mat-header-row class="acc-table__header-row" *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
-  <tr mat-row 
-    class="acc-table__row"
-    [ngClass]="{'acc-table__row-selected': row.id === (selected?.id ?? EMPTY_GUID)}"
-    *matRowDef="let row; columns: columnsToDisplay;"
-    (click)="onSelectionChanged(row)"
-    (dblclick)="onDoubleClick(row)"
-  ></tr>
-</table>
+        <ng-template #noDisplayFn [ngSwitch]="column.type">
+          <ng-container *ngSwitchCase="'Date'">
+            {{ getData(data, column.path) | date: 'd.MM.Y' }}
+          </ng-container>
+          <ng-container *ngSwitchCase="'Currency'">
+            <span class="acc-table__data-cell__number"> {{ getData(data, column.path) | number:'1.2-2' }} </span>
+          </ng-container>
+          <ng-container *ngSwitchCase="'Number'">
+            <span class="acc-table__data-cell__number"> {{ getData(data, column.path) }} </span>
+          </ng-container>
+          <ng-container *ngSwitchDefault>
+            {{ getData(data, column.path) }}
+          </ng-container>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row class="acc-table__header-row" *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
+    <tr mat-row 
+      class="acc-table__row"
+      [ngClass]="{'acc-table__row-selected': row.id === (selected?.id ?? EMPTY_GUID)}"
+      *matRowDef="let row; columns: columnsToDisplay;"
+      (click)="onSelectionChanged(row)"
+      (dblclick)="onDoubleClick(row)"
+    ></tr>
+  </table>
+</div>
