--- a/Accounting_frontend/src/dialog/dialog/dialog.component.scss
+++ b/Accounting_frontend/src/dialog/dialog/dialog.component.scss
@@ -1,23 +1,33 @@
 .dialog {
   background-color: white;
   padding: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   
   .title {
     color: black;
     padding: 0px 10px 10px 0px;
+    flex-shrink: 0;
+    flex-grow: 0;
   }
 
   .body {
     display: flex;
     flex-direction: column;
     padding: 20px 10px;
+    min-height: 0px;
+    flex-shrink: 1;
+    flex-grow: 1;
   }
 
   .buttons {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 20px
+    gap: 20px;
+    flex-shrink: 0;
+    flex-grow: 0;
   }
 
   .close-icon {
