Планирование, бек и фронт

--- a/Accounting_frontend/src/controls/autocomplete/autocomplete.component.html
+++ b/Accounting_frontend/src/controls/autocomplete/autocomplete.component.html
@@ -12,7 +12,11 @@
     [matAutocomplete]="auto"
   />
   
-  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" (optionSelected)="onOptionSelected($event)">
+  <mat-autocomplete 
+    #auto="matAutocomplete" 
+    [displayWith]="displayFn" 
+    (optionSelected)="onOptionSelected($event)"
+  >
     <mat-option *ngFor="let item of items" [value]="item">
       {{ displayFn(item) }}
     </mat-option>
