--- a/Accounting_frontend/src/controls/table/table.component.scss
+++ b/Accounting_frontend/src/controls/table/table.component.scss
@@ -2,7 +2,7 @@ $table-radius: 4px;
 
 .scroll {
   min-height: 0px;
-  height: auto;
+  height: 100%;
   max-height: 100%;
   overflow-y: auto;
   border-bottom: solid 5px lightgray;
