--- a/Accounting_frontend/src/styles.scss
+++ b/Accounting_frontend/src/styles.scss
@@ -88,3 +88,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     height: 100%;
   }
 }
+
+.text  {
+  color: black;
+  opacity: 0.8;
+}
+
+.text-sm  {
+  font-size: 0.8em;
+  color: black;
+  opacity: 0.8;
+}
