--- a/Accounting_frontend/src/operation/operation-list/operation-list.component.scss
+++ b/Accounting_frontend/src/operation/operation-list/operation-list.component.scss
@@ -53,3 +53,14 @@ $item-margin: 40px;
     font-weight: bold;
   }
 }
+
+.group {
+  text-align: center;
+  font-weight: 500;
+  color: gray;
+}
+
+.filter {
+  min-width: 0px;
+  padding-left: 30px;
+}
